# touyanxitong

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  market_meta.py
backend/app/agent/: __init__.py  api.py  events.py  export_utils.py  guardrails.py  mcp_router.py  mcp_server.py  orchestrator.py  schemas.py
backend/app/api/: routes_analytics.py  routes_annotations.py  routes_chain.py  routes_industry.py  routes_market.py  routes_quality.py  routes_reports.py  routes_research.py  routes_retail.py  routes_stocks.py  routes_tenbagger.py  routes_thesis.py  routes_thesis_review.py  routes_watchlist.py
backend/app/data_sources/: __init__.py  akshare_client.py  baostock_client.py  base.py  eodhd_client.py  hot_terms_client.py  http_utils.py  market_classifier.py  mock_data.py  news_client.py  polygon_client.py  provider.py  registry.py  sector_mapping_client.py  source_quality.py  tencent_client.py  tiingo_client.py  tushare_client.py  yahoo_client.py
backend/app/db/: models.py  session.py
backend/app/engines/: __init__.py  (+20 more)
backend/scripts/: backfill_all_market_data.py  backfill_market_data_queue.py  backfill_market_scores.py  daily_research_ops.py  discover_universe.py  init_db.py  run_agent_eval.py  run_continuous_free_backfill.sh  run_daily_pipeline.py  run_daily_update.py  run_industry_mapping.py  run_mcp_server.py  run_report_backfill.py  run_signal_backtest.py  run_thesis_replay.py  run_thesis_review.py  seed_industry_keywords.py
(+201 files in other folders)
