[project]
name = "alpha-radar-backend"
version = "0.1.0"
description = "AlphaRadar backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "loguru>=0.7",
  "apscheduler>=3.10",
  "polars>=1.0",
  "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]
real-data = [
  "akshare>=1.16",
  "baostock>=0.8",
  "tushare>=1.4",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
